--- a/style.css
+++ b/style.css
@@ -1,48 +1,141 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@300;400;500;600;700&display=swap');
+
+* {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  overflow-y: hidden !important;
+}
+
 body {
+  color: white;
+  background-color: #738bdc;
+  background-image: linear-gradient(315deg, #738bdc 0%, #48c3eb 74%);
+  height: 100vh;
+}
+
+h1 {
+  font-size: 40px;
+  letter-spacing: 0.3rem;
+  margin-bottom: 10px;
+}
+
+h3 {
+  font-size: 25px;
   text-align: center;
-  justify-content: center;
-  padding: 50px;
+}
+
+h4 {
+  font-size: 22px;
+  margin: 0px;
+  margin-bottom: 5px;
+}
+
+h5 {
+  margin-top: 10px;
+  text-transform: uppercase;
+}
+
+p {
+  line-height: 1.6rem;
+  font-size: 18px;
+  background-color: rgba(41, 118, 250, 0);
+  margin: 40px 20px 20px 20px;
+}
+
+p span {
+  text-decoration: underline;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
 }
 
 button {
-  margin-bottom: 50px;
+  background-color: #fde7f9;
+  background-image: linear-gradient(315deg, #fde7f9 0%, #aacaef 74%);
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 20px;
+  padding: 10px 20px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  transition: 0.3s ease;
 }
 
-/* To make .grid and .mini-grid display inline and center everything */
+button:hover {
+  opacity: 0.9;
+  color: rgb(45, 53, 133);
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+table {
+  margin: auto;
+  margin-top: -20px;
+  text-align: left;
+}
+
+img {
+  margin-top: -50px;
+}
+
+i {
+  font-size: 25px;
+}
+
+#restart-button {
+  margin-left: 20px;
+  font-size: 20px;
+  background-color: #ee8c68;
+  background-image: linear-gradient(315deg, #ee8c68 0%, #eb6b9d 74%);
+  color: white;
+}
+#play-button {
+  margin-left: 20px;
+  font-size: 20px;
+  color: black;
+}
+#play-button:hover {
+  opacity: 0.9;
+  color: rgb(45, 53, 133);
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+i {
+  font-size: 25px;
+  opacity: 0.8;
+  vertical-align: bottom;
+}
+
+.wrap {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .container {
   display: flex;
-  text-align: center;
-  justify-content: center;
+  margin: auto;
+}
+
+.heading {
+  flex-direction: row;
+}
+
+.tetris-logo {
+  width: 200px;
 }
 
 .grid {
-  width: 200px;
-  height: 400px;
+  width: 350px;
+  height: 700px;
+  background-color: #b0f3f1;
   display: flex;
   flex-wrap: wrap;
-  background-color: yellow;
 }
 
 .grid div {
-  height: 20px;
-  width: 20px;
-}
-
-/* Tetromino */
-.tetromino {
-  background-color: blue;
-}
-
-.mini-grid {
-  margin-left: 50px;
-  width: 80px;
-  height: 80px;
-  display: flex;
-  flex-wrap: wrap;
-  background-color: yellow;
-}
-
-.mini-grid div {
-  height: 20px;
-  width: 20px;
+  height: 35px;
+  width: 35px;
 }
