--- a/style.css
+++ b/style.css
@@ -12,19 +12,14 @@ body {
   height: 100vh;
 }
 
-h1 {
-  font-size: 40px;
-  letter-spacing: 0.3rem;
-  margin-bottom: 10px;
-}
-
+/* Headings */
 h3 {
   font-size: 25px;
   text-align: center;
 }
 
 h4 {
-  font-size: 22px;
+  font-size: 24px;
   margin: 0px;
   margin-bottom: 5px;
 }
@@ -47,7 +42,7 @@ p span {
   text-transform: uppercase;
   letter-spacing: 0.1rem;
 }
-
+/* Buttons */
 button {
   background-color: #fde7f9;
   background-image: linear-gradient(315deg, #fde7f9 0%, #aacaef 74%);
@@ -106,14 +101,14 @@ i {
   opacity: 0.8;
   vertical-align: bottom;
 }
-
+/* Wrap */
 .wrap {
   margin-top: 30px;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
-
+/* Container */
 .container {
   display: flex;
   margin: auto;
@@ -126,7 +121,7 @@ i {
 .tetris-logo {
   width: 200px;
 }
-
+/* Grid */
 .grid {
   width: 350px;
   height: 700px;
@@ -195,12 +190,13 @@ i {
   background: blue;
 }
 
+/* Mini-Grid Container */
 .mini-grid-container {
   width: 320px;
   text-align: center;
   justify-content: center;
 }
-
+/* Mini-Grid */
 .mini-grid {
   width: 100px;
   height: 100px;
